# Computational-Electrophysiology

./: README.md
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/: .gitignore  CMakeLists.txt  Makefile  clean_project.sh  delete_vtk.sh  matrix.txt  matrix2.txt  rhs.txt  run_simulation.sh  run_steady_state.sh  teste.sst  vm_1.txt
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/example_configs/: simple_test.in
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/example_configs/30um/: simple_purkinje_5cm_100ms.in  simple_purkinje_5cm_110ms.in  simple_purkinje_5cm_120ms.in  simple_purkinje_5cm_130ms.in  simple_purkinje_5cm_140ms.in  simple_purkinje_5cm_150ms.in  simple_purkinje_5cm_160ms.in  simple_purkinje_5cm_170ms.in  simple_purkinje_5cm_180ms.in  simple_purkinje_5cm_190ms.in  simple_purkinje_5cm_200ms.in  simple_purkinje_5cm_210ms.in  simple_purkinje_5cm_220ms.in  simple_purkinje_5cm_230ms.in  simple_purkinje_5cm_240ms.in  simple_purkinje_5cm_250ms.in  simple_purkinje_5cm_260ms.in  simple_purkinje_5cm_270ms.in  simple_purkinje_5cm_280ms.in  simple_purkinje_5cm_290ms.in  simple_purkinje_5cm_300ms.in  (+21 more)
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/include/: graph.h  noble.h  options.h  solver.h  sst.h
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/inputs/: simple_cable_5cm.in  simple_purkinje_cable_5cm.in  simple_purkinje_cable_5cm_100ms.in  simple_purkinje_cable_5cm_110ms.in  simple_purkinje_cable_5cm_120ms.in  simple_purkinje_cable_5cm_130ms.in  simple_purkinje_cable_5cm_170ms.in  simple_purkinje_cable_5cm_190ms.in  simple_purkinje_cable_5cm_210ms.in  simple_purkinje_cable_5cm_230ms.in  simple_purkinje_cable_5cm_270ms.in  simple_purkinje_cable_5cm_300ms.in  sst_simple_purkinje_cable_5cm.in  sst_simple_purkinje_cable_5cm_120ms.in  sst_simple_purkinje_cable_5cm_130ms.in  sst_simple_purkinje_cable_5cm_140ms.in  sst_simple_purkinje_cable_5cm_150ms.in  sst_simple_purkinje_cable_5cm_160ms.in  sst_simple_purkinje_cable_5cm_170ms.in  sst_simple_purkinje_cable_5cm_180ms.in  sst_simple_purkinje_cable_5cm_200ms.in  sst_simple_purkinje_cable_5cm_230ms.in  sst_simple_purkinje_cable_5cm_240ms.in  sst_simple_purkinje_cable_5cm_250ms.in  sst_simple_purkinje_cable_5cm_260ms.in  sst_simple_purkinje_cable_5cm_280ms.in  sst_simple_purkinje_cable_5cm_290ms.in
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/networks/: cable-10cm.vtk  cable_10cm.vtk
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/plot/: cable-5cm.plt  cable5cm-dog.plt
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/scripts/: calc_apd.py  calc_apd_dir.py  calc_apd_single.py  calc_bcl_apd.py  plot_potential.py
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/src/: graph.cpp  main.cpp  model.cpp  options.cpp  purkinje.cpp  solver.cpp  sst.cpp
Alternans-Purkinje-Cable/Discrete-Fenton-Experiment/steady_state/: cable-5cm-110ms-Gap.sst  cable-5cm-120ms-Gap.sst  cable-5cm-130ms-Gap.sst  cable-5cm-170ms-Gap.sst  cable-5cm-180ms-Gap.sst  cable-5cm-220ms-Gap.sst  cable-5cm-240ms-Gap.sst  cable-5cm-250ms-Gap.sst  cable-5cm-260ms-Gap.sst  cable-5cm-270ms-Gap.sst
Alternans-Purkinje-Cable/Fenton-Experiment/: .gitignore  CMakeLists.txt  Makefile  main.cpp  matrix.txt  matrix2.txt  rhs.txt  run_simulation.sh  teste.sst  vm_1.txt
Alternans-Purkinje-Cable/Fenton-Experiment-2/ConvertPurkinjeToVTK/: CMakeLists.txt  purkinje_mesh.vtk
Alternans-Purkinje-Cable/Fenton-Experiment/ConvertPurkinjeToVTK/: purkinje_mesh.vtk
Alternans-Purkinje-Cable/Fenton-Experiment/Plot/: cable-5cm.plt
Alternans-Purkinje-Cable/Fenton-Experiment/example_configs/: simple_beeler_reuter_5cm.ini  simple_fitzhugh_5cm.ini  sst_noble_5cm.ini  sst_noble_discordant_5cm.ini
Alternans-Purkinje-Cable/Fenton-Experiment/examples_config/: cco_purkinje_network.ini  purkinje_cable_5cm.ini  simple_purkinje_cable_5cm.ini  sst_purkinje_cable_5cm.ini
Alternans-Purkinje-Cable/Fenton-Experiment/include/: noble.h  solver.h  sst.h
Alternans-Purkinje-Cable/Fenton-Experiment/networks/: cable-5cm.vtk  cable-8cm.vtk
Alternans-Purkinje-Cable/Fenton-Experiment/plot/: cable-10cm.plt  cable-5cm-BR.plt
Alternans-Purkinje-Cable/Fenton-Experiment/scripts/: calc_bcl_apd.py  calc_velocity.py  plot_ap.py
Alternans-Purkinje-Cable/Fenton-Experiment/src/: main.cpp  solver.cpp  sst.cpp
Alternans-Purkinje-Cable/Fenton-Experiment/sst_pk_cable_5cm/: pk_cable_5cm_300ms.sst  pk_cable_5cm_300ms_BACKUP.sst
Alternans-Purkinje-Cable/Fenton-Experiment/tmp_simple_pk_cable_5cm/: V_t_0  V_t_4400
Alternans-Purkinje-Cable/New-Fenton-Experiment/: .gitignore  CMakeLists.txt  ToDo  clear_results.sh  output.sst  run_simulation.sh  run_valgrind.sh
Alternans-Purkinje-Cable/New-Fenton-Experiment/example_configs/: induce_noble_discordant_5cm.ini  induced_discordant_alternans_beeler_reuter_8cm.ini  simple_beeler_reuter_5cm.ini  simple_discordant_beeler_reuter_8cm.ini  simple_fitzhugh_5cm.ini  simple_noble_5cm.ini  sst_noble_5cm.ini  sst_sample.ini
Alternans-Purkinje-Cable/New-Fenton-Experiment/plot/: cable-5cm-2.plt  cable-8cm-BR.plt
Alternans-Purkinje-Cable/New-Fenton-Experiment/scripts/: .gitignore  calc_bcl_apd.py  convert_jpg_to_mp4.sh  plot_potential.py
Alternans-Purkinje-Cable/New-Fenton-Experiment/src/: main.cpp
Alternans-Purkinje-Cable/New-Fenton-Experiment/steady_state/: .gitignore  cable-5cm-110ms-Gap.sst  cable-5cm-140ms-Gap.sst  cable-5cm-180ms-Gap.sst  cable-5cm-200ms-Gap.sst  cable-5cm-210ms-Gap.sst  cable-5cm-220ms-Gap.sst  cable-5cm-230ms-Gap.sst  cable-5cm-240ms-Gap.sst  cable-5cm-250ms-Gap.sst  cable-5cm-250ms-NoGap.sst  cable-5cm-255ms-NoGap.sst  cable-5cm-260ms-Gap.sst  cable-5cm-260ms-NoGap.sst  cable-5cm-265ms-NoGap.sst  cable-5cm-270ms-Gap.sst  cable-5cm-270ms-NoGap.sst  cable-5cm-275ms-NoGap.sst  cable-5cm-280ms-Gap.sst  cable-5cm-280ms-NoGap.sst  cable-5cm-290ms-Gap.sst  cable-5cm-300ms-Gap-Induced.sst  cable-5cm-300ms-Gap.sst  cable-8cm-induced-discordant-BR.sst
Cell-Model-Solver-v2/: TODO  (+1 more)
Cell-Model-Solver-v3/src/models_library/: CMakeLists.txt  beeler_reuter_1977_2.c  mitchell_shaeffer.c  model_common.h  noble_1962.c  noble_1962.h
(+2068 files in other folders)
